custom/examples/traefik.middleware.basicauth.yaml
---

apiVersion: 'traefik.containo.us/v1alpha1'
kind: 'Middleware'
metadata:
  name: 'ingress-basic-auth'
spec:
  basicAuth:
    secret: 'ingress-basic-auth'
