custom/examples/deployment.nfs-patch.yaml
---

apiVersion: 'apps/v1'
kind: 'Deployment'
metadata:
  name: 'homeassistant'
spec:
  template:
    spec:
      volumes:
        - name: 'homeassistant-config'
          nfs:
            server: '192.168.1.88'
            path: '/srv/config/homeassistant'
         # Unset this from object to use NFS
          emptyDir:
